--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,16 +3,19 @@
 
 </div> --}}
 
-<section class="top-section">
+<header class="top-section">
   <div class="container">
-    <h1>Discover & Connect with People out of your city</h1>
-    <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
+    <h1>Discover & Connect</h1>
+    <p>Meet people out of your city</p>
   </div>
-</section>
+</header>
 
-<section>
-   <div class="jumbotron text-center" id="jumbo-header">
-    <p><a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a></p>
+<section class="jumbotron">
+   <div class="row text-center flex-column">
+     <div class="jumbo-content col-md-8 align-self-baseline">
+       <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
+        <a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a>
+     </div>
   </div>
 </section>
 
