Add: Style 2 First home sections

--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -4,8 +4,15 @@ $navbar-height: 56px;
 $primary_color: #25797c;
 $border-color: #e4e4e4;
 
+$creamwhite: #e5e1d3;
+$yellow: #e59c40;
+$darkblue: #105657;
+$middleblue: #006568;
+$lightblue: #25797c;
+
 //Fonts
-$primary-text-font: 'Maven Pro', sans-serif;
+$heading-font: 'Maven Pro', sans-serif;
+$text-font: 'Roboto', sans-serif;
 
 //Font sizes
 $document-text-size: 16px;
