--- a/public/sass/views/_userprofile.scss
+++ b/public/sass/views/_userprofile.scss
@@ -1,7 +1,7 @@
 .buddie-profile{
   .top-banner{
     color: #fff;
-    background: $primary_color;
+    background: $lightblue;
     .container{
       position: relative;
     }
