--- a/views/partials/profileCard2.hbs
+++ b/views/partials/profileCard2.hbs
@@ -5,7 +5,7 @@
           <img src="https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" alt="profile-sample1" class="background">
       </div>
       <div class="profile-thumb-block">
-        <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+        <img class="profile-img img-fluid" src='/images/buddie-profile.jpg'; alt="Card image cap">
       </div>
       <div class="card-content">
           <h2>Justin Mccoy<small>Designer</small></h2>
