--- a/public/sass/modules/_main-structure.scss
+++ b/public/sass/modules/_main-structure.scss
@@ -11,10 +11,13 @@ body {
   margin: 0;
   padding: 0;
   font-size: $document-text-size;
-  font-family: $primary-text-font;
+  font-family: $text-font;
   padding-top: $navbar-height;
 }
-
+h1,h2,h3,h4,h5{
+  font-family: $heading-font;
+  font-weight: 400!important;
+}
 .vh-100{
   min-height: 100vh;
   &.top-section{
