--- a/public/sass/views/_home.scss
+++ b/public/sass/views/_home.scss
@@ -1,23 +1,28 @@
 p{
-  font-family: $primary-text-font;
+  font-family: $heading-font;
   font-size: $p-text-size; 
 }
 
 h2{
   font-size: $h2-text-size;
 }
-
+.faded-text{
+  color: $lightblue;
+  font-size: $h3-text-size;
+}
+.meet-our-buddies, .about-us{
+  padding: 30px 0;
+}
 
 .jumbotron {
+  margin-bottom: 0;
   color: white;
   background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5)),
   url('../../images/jumbotron-background.jpg') center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height:300px;
-  .row{
-    padding-top: 50px;
-  }
+  height:340px;
+  padding: 70px 15px 30px 15px;
 }
 
 .top-section{
@@ -26,12 +31,15 @@ h2{
     font-size: $h1-text-size;
     padding: 5% 0 0 0;
     font-weight: 400;
-  }
-  .lead{
-    font-weight: 400;
+    margin-bottom:0;
   }
 }
 
+.lead{
+  font-weight: 200;
+  font-family: $text-font;
+  font-size: $h2-text-size;
+}
 
 #jumbo-mid{
   display: flex;
@@ -49,4 +57,14 @@ h2{
   url('../../images/values2.jpg') center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media (min-width: 413px) {
+  .jumbotron {
+    height:350px;
+    padding: 120px 15px 30px 15px;
+    p{
+      font-size: $h2-text-size;
+    }
+  }
 }
