--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,14 +6,14 @@
 <header class="top-section">
   <div class="container">
     <h1>Discover & Connect</h1>
-    <p>Meet people out of your city</p>
+    <p class="lead">Meet people out of your city</p>
   </div>
 </header>
 
 <section class="jumbotron">
-   <div class="row text-center flex-column">
-     <div class="jumbo-content col-md-8 align-self-baseline">
-       <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
+   <div class="row flex-column">
+     <div class="jumbo-content col-md-8 mx-auto">
+       <p>LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
         <a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a>
      </div>
   </div>
@@ -21,6 +21,7 @@
 
 <section class="meet-our-buddies">
   <div class="container">
+    <h3 class="faded-text">Explore</h3>
     <h2>Meet our buddies</h2>
     {{> swiperslider }}
   </div>
@@ -40,7 +41,7 @@
 <section class="about-us">
   <div class="container marketing text-center">
     <div class="row">
-      <div class="col-lg-4 mt-3">
+      <div class="col-lg-4">
         <h2 class="mt-3">Heading</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
       </div>
