--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <title>LocalBuddy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700" rel="stylesheet">    <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500|Roboto:100,300,400" rel="stylesheet">    <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/swiper/swiper.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
