--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,18 +31,32 @@
   <div class="jumbotron text-right" id="jumbo-mid">
     <div class="row">
     <div class="lead col-md-9 ml-x">
-      <h2>Hello</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque a cum nihil sapiente consequuntur laborum sunt qui. Eum blanditiis, nemo autem error praesentium, necessitatibus eligendi quibusdam vitae fuga quod cumque.</p>
     </div>
     </div>
   </div>
 </section>
 
 <section class="about-us">
-  <div class="container marketing text-center">
+  <div class="container">
     <div class="row">
-      <div class="col-lg-4">
-        <h2 class="mt-3">Heading</h2>
+      <div class="col-md-4">
+        <div class="icon">
+          <i class="fas fa-archway"></i>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <h2>Travel</h2>
+        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      </div>
+    </div>
+     <div class="row">
+      <div class="col-md-4">
+        <div class="icon">
+          <i class="fas fa-hands-helping"></i>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <h2>Meet people</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
       </div>
     </div>
@@ -54,8 +68,6 @@
     <div class="container">
       <div class="row">
         <div class="lead col-9">
-          <h2>Hello</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit necessitatibus dolores autem sequi sint voluptatem dolorum inventore amet expedita ex. Dolorem repellendus necessitatibus, quibusdam veritatis suscipit officia commodi numquam obcaecati!</p>
         </div>
       </div>
     </div>
