--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -4,10 +4,10 @@
       <img class="card-img-top" src='/images/buddie-profile.jpg' alt="Card image cap">
     </div>
     <div class="card-body">
-      <h5 class="card-title">{{this.fullname}}</h5>
+      <h2 class="card-title">{{this.fullname}}</h5>
       <p class="city">{{this.city}}</p>
       <p class="highlights"><i>{{this.highlights}}</i></p>
-      <p class="bio"><i>{{this.biography}}</i></p>
+      <p class="bio">{{this.biography}}</p>
 
     </div>
   </div>
