--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -5,18 +5,18 @@
   }
 }
 .navbar-toggle-button {
+  z-index: 9999;
   position: fixed;
   top: 20px;
   right: 15px;
-  height: 27px;
-  width: 40px;
+  height: 20px;
+  width: 30px;
   cursor: pointer;
-  z-index: 101;
   transition: opacity .25s ease;
   span{
-    background: #dfdfdf;
+    background: #000;
     border: none;
-    height: 4px;
+    height: 2px;
     width: 100%;
     position: absolute;
     top: 0;
@@ -24,24 +24,21 @@
     transition: all .35s ease;
     cursor: pointer;
     &:nth-of-type(2) {
-      top: 9px;
-    }
-    &:nth-of-type(2) {
-      top: 9px;
+      top: 6px;
     }
     &:nth-of-type(3) {
-      top: 18px; 
+      top: 12px; 
     }
   }
   &.open{
     span.top{
-      transform: translateY(9px) translateX(0) rotate(45deg);
+      transform: translateY(6px) translateX(0) rotate(45deg);
     }
     span.middle{
       opacity: 0;
     }
     span.bottom {
-      transform: translateY(-9px) translateX(0) rotate(-45deg);
+      transform: translateY(-6px) translateX(0) rotate(-45deg);
     }
     span {
       background: #000;
@@ -51,8 +48,8 @@
 
 .menu-container {
   position: fixed;
-  background: #eeeeee;
-  top: 0;
+  background: #fff;
+  top: $navbar-height;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -76,10 +73,20 @@
 width: 100%;
 margin-top: 50px;
 list-style:none;
+padding-left: 0;
   li{
     margin-top: 10px;
     a{
       color: #000;
+      font-size: $form-text-size;
+      font-family: $heading-font;
     }
+  }
+  button{
+    border: none;
+    background:transparent;
+    padding: 0;
+    font-size: $form-text-size;
+    font-family: $heading-font;
   }
 }
