--- a/public/sass/components/_slider.scss
+++ b/public/sass/components/_slider.scss
@@ -1,7 +1,11 @@
 .swiper-container{
+  padding-bottom: 20px;
   .swiper-pagination{
-    display: none!important;
   }
+}
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: #000!important;
 }
 .swiper-slide{
   a{
@@ -21,22 +25,21 @@
   .card-img-top{
   }
   .card-title{
-    font-size: 1rem;
     margin-bottom: 0;
-    min-height: 40px;
   }
   .card-body{
     padding: 1rem;
   }
   .city{
-    font-size: .8rem;
     margin-bottom: 0;
+    margin-top: 5px;
   }
   .highlights{
     margin-top: 5px;
-    font-size: 0.7rem;
-    margin-bottom: 0;
-    min-height: 50px;
+  }
+  .bio{
+    height: 135px;
+    overflow: hidden;
   }
   
 }
