--- a/public/sass/views/_home.scss
+++ b/public/sass/views/_home.scss
@@ -11,7 +11,15 @@ h2{
   font-size: $h3-text-size;
 }
 .meet-our-buddies, .about-us{
-  padding: 30px 0;
+  padding: 50px 0;
+}
+.about-us{
+  .icon{
+    font-size: 80px;
+  }
+  h2{
+    font-size: $h1-text-size;
+  }
 }
 
 .jumbotron {
@@ -66,5 +74,12 @@ h2{
     p{
       font-size: $h2-text-size;
     }
+  }
+}
+
+@media (min-width: 768px) {
+  .jumbotron {
+    height: 450px;
+    padding: 210px 15px 30px 15px;
   }
 }
