--- a/public/sass/components/_slider.scss
+++ b/public/sass/components/_slider.scss
@@ -46,7 +46,12 @@
 
 @media (min-width: 768px) {
   .swiper-slide{
-    
+    .card-body{
+      padding: 1rem 0;
+    }
+    .card-title{
+      font-size: 1.1rem;
+    }
   }
   .swiper-container{
     .swiper-pagination{
