--- a/public/sass/views/_home.scss
+++ b/public/sass/views/_home.scss
@@ -1,8 +1,3 @@
-p{
-  font-family: $heading-font;
-  font-size: $p-text-size; 
-}
-
 h2{
   font-size: $h2-text-size;
 }
@@ -23,6 +18,7 @@ h2{
 }
 
 .jumbotron {
+  border-radius: 0;
   margin-bottom: 0;
   color: white;
   background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5)),
