--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,16 +11,18 @@
 </header>
 
 <section class="jumbotron">
-   <div class="row flex-column">
-     <div class="jumbo-content col-md-8 mx-auto">
-       <p>LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
-        <a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a>
-     </div>
+  <div class="container">
+    <div class="row">
+      <div class="jumbo-content col-md-8 col-lg-6">
+        <p>LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
+          <a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a>
+      </div>
+    </div>
   </div>
 </section>
 
 <section class="meet-our-buddies">
-  <div class="container">
+  <div class="container-fluid">
     <h3 class="faded-text">Explore</h3>
     <h2>Meet our buddies</h2>
     {{> swiperslider }}
@@ -39,23 +41,17 @@
 <section class="about-us">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-lg-4">
         <div class="icon">
           <i class="fas fa-archway"></i>
         </div>
-      </div>
-      <div class="col-md-8">
         <h2>Travel</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
       </div>
-    </div>
-     <div class="row">
       <div class="col-md-4">
         <div class="icon">
           <i class="fas fa-hands-helping"></i>
         </div>
-      </div>
-      <div class="col-md-8">
         <h2>Meet people</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
       </div>
@@ -74,4 +70,6 @@
   </div>
 </section>
 
+<footer class="site-footer">
 
+</footer>
