--- a/views/partials/reservationCard.hbs
+++ b/views/partials/reservationCard.hbs
@@ -1,11 +1,15 @@
-<h2>Name of the reservation</h2>
-<div>
-  <h1>{{this.idBuddy}}</h1>
-  <p>{{this.status}}</p>
-  <p><i>{{this.startDate}}</i></p>
-</div>
+<div class="container">
+  <div>
+    <h2>{{this.idBuddy}}</h2>
+    <p>{{this.status}}</p>
+    <p><i>{{this.startDate}}</i></p>
+    <p><i>{{this.endDate}}</i></p>
+  </div>
 
-<form method="post" action="/profile/reservations">
-  <input type="submit" name="accepted" value="Accept" class="form-control input-lg">
-  <input type="submit" name="rejected" value="Reject" class="form-control input-lg">   
-</form>
+  <form method="post" action="/profile/reservations">
+    <button type="submit" name="status" value="Accepted" class="form-control input-lg">Accept</button>
+    <button type="submit" name="status" value="Rejected" class="form-control input-lg">Reject</button>  
+    <input type="hidden" name="id" value="{{this._id}}">
+  </form>
+
+</div>
