--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -11,7 +11,7 @@
         {{/if}}
       </div>
       <div class="avatar round">
-        <img class="profile-img img-fluid" src='/images/default-avatar.jpg'; alt="Card image cap">
+        <img class="profile-img img-fluid" src='/images/buddie-profile.jpg'; alt="Card image cap">
       </div>
     </div>
   </div>
