--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,6 +32,10 @@ h2 {
   .site-footer a {
     color: #fff; }
 
+@media (min-width: 768px) {
+  .login-section {
+    overflow: hidden; } }
+
 .btn {
   border-radius: 0; }
 
@@ -194,6 +198,11 @@ h2 {
     font-size: 0.8rem;
     font-family: "Maven Pro", sans-serif; }
 
+.buddie-profile input {
+  font-size: 12px;
+  padding-right: 0;
+  border-radius: 0; }
+
 .buddie-profile .top-banner {
   color: #fff;
   background: #25797c; }
@@ -225,7 +234,22 @@ h2 {
   border-radius: 50%;
   overflow: hidden; }
 
+.book-section {
+  border: 1px solid #e4e4e4;
+  padding: 5px; }
+
 @media (min-width: 556px) {
+  .mt-3 {
+    margin-top: 3rem !important; }
+  .buddie-profile .top-banner .avatar {
+    height: 170px;
+    width: 170px; }
+  .avatar {
+    right: 15px;
+    width: 70px;
+    height: 70px; } }
+
+@media (min-width: 768px) {
   .mt-3 {
     margin-top: 3rem !important; }
   .buddie-profile .top-banner .avatar {
