add loader to home page

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/forms';
 @import 'components/slider';
 @import 'components/navbar';
+@import 'components/loader';
 
 // Views
 @import 'views/user';
