--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -2,4 +2,5 @@
 <script src="/javascripts/bootstrap/bootstrap.min.js"></script>
 <script src="/javascripts/swiper/swiper.min.js"></script>
 <script src="/javascripts/moment/moment.min.js"></script>
+<script src="/javascripts/wow.min.js"></script>
 <script src="/javascripts/main.js"></script>
