--- a/public/sass/base/_variables.scss
+++ b/public/sass/base/_variables.scss
@@ -23,6 +23,7 @@ $buddie-profile-city-size: 1.3rem;
 $h1-text-size : 2rem;
 $h2-text-size : 1.4rem;
 $h3-text-size : 1rem;
+$h4-text-size : .8rem;
 $p-text-size: 1.1rem;
 
 //Forms
