--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,6 +4,7 @@
     <div class="row vh-100 align-items-center top-section">
       
       <div class="col-md-6 col-lg-5 mx-auto">
+        <h2 class="mb-4">Log in to your account</h2>
         <section class="login-form text-center">
           <form method="post" action="/login" role="login" class="user-form">
             
@@ -15,7 +16,7 @@
             <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Login</button>
             
             <footer>
-              <a href="/signup">Create account</a> or <a href="#">reset password</a>
+              Not registered yet? <a href="/signup">Create account</a>
             </footer>
 
           </form>
