--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,11 +1,11 @@
-<div class="container mb-5 mt-3">
+<div class="container">
   <div class="row vh-100 align-items-center">
     
     <div class="col-md-7 col-lg-5 mx-auto">
       <div class="form-top">
         <div class="d-flex flex-column">
           <img src="http://via.placeholder.com/75x45" class="img-fluid align-self-end" alt="Logo" />
-          <h1>Sign up</h1>
+          <h2>Sign up</h2>
         </div>
       </div>
 
@@ -21,10 +21,10 @@
           <div class="form-group">
             <h2 class="text-center">Everything ready?</h2>
             <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign up</button>
-            <div class="text-center">
-              <p>Already have an account? <a href="/login">Log in</a></p>
-            </div>
           </div>
+           <footer class="text-center">
+              <p>Already have an account? <a href="/login">Log in</a></p>
+            </footer>
         </form>
       </section> 
 
