--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="brand col-3 col-sm-3">
-      <a class="navbar-brand" href="/"><strong>LB</strong></a>
+      <a class="navbar-brand" id="site-logo" href="/"><strong>LB</strong></a>
     </div>
     <div class="col col-7 col-sm-8">
       <form class="searchform" action="/search">
