Add footer and some styling

--- a/public/sass/components/_buttons.scss
+++ b/public/sass/components/_buttons.scss
@@ -2,7 +2,7 @@
   border-radius:0;
   font-weight: 200;
   transition: all .5s;
-  &.btn-primary, .btn-success{
+  &.btn-primary{
     background:#000;
     border-color: #000;
     &:hover{
