--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -41,7 +41,7 @@
       transform: translateY(-6px) translateX(0) rotate(-45deg);
     }
     span {
-      background: #000;
+      background: #fff;
     }
   }
 }
