--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="col col-7 col-sm-8">
       <form class="searchform" action="/search">
-        <input type="text" class="form-control" placeholder="City" name="city" aria-label="City">
+        <input type="text" class="form-control" placeholder="Search by city" name="city" aria-label="City">
       </form>
     </div>
   </div>
