--- a/public/sass/modules/_main-structure.scss
+++ b/public/sass/modules/_main-structure.scss
@@ -36,11 +36,21 @@ a{
   text-decoration: none;
 }
 .site-footer{
-  background: black;
-  color: #fff;
-  a{
-    color: #fff;
-  }
+  padding: 30px 0;
+  ul{
+    list-style: none;
+    padding-left: 0;
+      li{
+        color: #fff;
+        font-size: .8rem;
+        font-weight: 100;
+        margin-bottom: 4px;
+      }
+    }
+    background: black;
+    a{
+      color: #fff;
+    }
 }
 
 @media (min-width: 768px) {
