--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="jumbo-content col-md-8 col-lg-6">
           <p>LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
-            <a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a>
+            <a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="jumbo-content col-md-8 col-lg-6">
           <p>Are you ready to connect with thousands of friends to live experiences out of your city?</p>
-            <a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a>
+            <a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a>
         </div>
       </div>
     </div>
