add: searchcard style

--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -30,6 +30,12 @@
   }
   footer{
     font-size: $h4-text-size;
+    a{
+      &:hover{
+        text-decoration: none;
+        color: $darkblue;
+      }
+    }
   }
 }
 
