--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,6 +88,9 @@ a {
     margin-top: 30px; }
   .user-form footer {
     font-size: 0.8rem; }
+    .user-form footer a:hover {
+      text-decoration: none;
+      color: #105657; }
 
 .searchform {
   display: block; }
@@ -349,11 +352,36 @@ a {
 .city {
   text-transform: capitalize; }
 
-.buddies-list .profile-card {
-  background: #e4e4e4; }
+.buddie-card {
+  color: #000;
+  transition: all 1s ease;
+  display: inline-block;
+  padding: 15px 0; }
+  .buddie-card h3, .buddie-card .rate {
+    margin-top: 15px; }
+  .buddie-card a {
+    color: #000; }
+    .buddie-card a:hover {
+      text-decoration: none;
+      background: lightblue; }
+  .buddie-card .highlights {
+    color: #000;
+    margin-bottom: 0; }
+  .buddie-card .rate {
+    font-size: 1.4rem;
+    font-family: "Maven Pro", sans-serif; }
 
-.buddies-list .buddie-info {
-  height: 200px; }
+@media (min-width: 768px) {
+  .buddie-card figure img {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out; }
+  .buddie-card figure:hover img {
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0); }
+  .highlights {
+    color: #000; } }
 
 h2 {
   font-size: 1.4rem; }
