--- a/views/partials/userListCard.hbs
+++ b/views/partials/userListCard.hbs
@@ -1,14 +1,20 @@
-<div class="col-md-6 mb-3">
-  <div class="profile-card px-3">
-    <div class="row">
-      <div class="col-4">
-        <img class="img-fluid" src="{{this.avatarUrl}}" alt="{{this.username}}">
-      </div>
-      <div class="col-8">
-        <h5 class="card-title">{{this.fullname}}</h5>
-        <p class="city">{{this.city}}</p>
-        <p class="highlights"><i>{{this.highlights}}</i></p>
+<div class="col-md-6 buddie-card">
+  <a href="/buddies/{{this.id}}">
+    <div class="px-3">
+      <div class="row">
+        <figure class="col-12 profile-img">
+          <img class="img-fluid" src="/images/buddie-profile.jpg" alt="{{this.username}}">
+        </figure>
+        <div class="col-12">
+          <div class="d-flex justify-content-between">
+            <h3 class="card-title">{{this.fullname}}</h3>
+            <div class="rate">7.9</div>
+          </div>
+          <p class="city">{{this.city}}</p>
+          
+          <p class="highlights"><i>{{this.highlights}}</i></p>
+        </div>
       </div>
     </div>
-  </div>
+  </a>
 </div>
