--- a/views/search/userlist.hbs
+++ b/views/search/userlist.hbs
@@ -1,13 +1,17 @@
-<section class="buddies-list">
+<section class="buddies-list pt-5">
   <div class="container">
+   {{#if users}}
     <div class="row">
-      {{#if users}}
+      <h2 class="col-12">We have found {{users.length}} buddies in Barclona</h2>
+    </div>
+    <div class="row">
         {{#each users}}
           {{> userListCard}}
         {{/each}}
       {{else}}
         <p>No users found</p>
-      {{/if}}
+      
     </div>
+    {{/if}}
   </div>
 </section>
