Start work pull

--- a/public/sass/views/_userprofile.scss
+++ b/public/sass/views/_userprofile.scss
@@ -1,54 +1,41 @@
-.buddie-profile{
-  input{
-    font-size: 12px;
-    padding-right: 0;
-    border-radius: 0;
+.header{
+  .user-pic-container{
+    // background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+    width: 375px;
+    height: 375px;
+    position: absolute;
+    top: 56px;
   }
-  .top-banner{
-    color: #fff;
-    background: $lightblue;
-    .container{
+   #username{
+     text-align: center;
+     
+     height: 50px;
+   }
+  
+  #user-pic {
+      object-fit: cover;
+      width: 375px;
+      height: 375px;
+      height: 100%;
+      overflow: hidden;
       position: relative;
-    }
-    .buddie-info{
-      height: 150px;
-      h2{
-        font-size: $buddie-profile-name-size;
-        margin-bottom: 0;
-      }
-      .city{
-        font-weight: 200;
-        font-size: $buddie-profile-city-size;
-        margin-bottom: 0;
-      }
-    }
-    .rate{
-      font-size: $buddie-profile-city-size;
-    }
-    .avatar{
-      bottom: -30px;
-      height: 140px;
-      width: 140px;
-      top: auto;
-    }
-  }
-}
+   } 
 
-.avatar{
-  position: absolute;
-  bottom: -10px;
-  right: 10px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  overflow: hidden;
+   h2{
+     position: absolute;
+     top: 360px;
+     font-size: $buddie-profile-name-size;
+     color: white;
+   }
+   h3{
+    font-size: $buddie-profile-city-size;
+    // position: absolute;
+    // top: 400px;
+   }
+   
+    
+  
 }
-
-.book-section{
-  border: 1px solid $border-color;
-  padding: 5px;
-}
-
 
 @media (min-width: 556px) {
   .mt-3{
@@ -69,21 +56,21 @@
   }
 }
 
-@media (min-width: 768px) {
-  .mt-3{
-    margin-top: 3rem!important;
-  }
-  .buddie-profile{
-    .top-banner{
-      .avatar{
-        height: 170px;
-        width: 170px;
-      }
-    }
-  }
-  .avatar{
-    right: 15px;
-    width: 70px;
-    height: 70px;
-  }
-}
+// @media (min-width: 768px) {
+//   .mt-3{
+//     margin-top: 3rem!important;
+//   }
+//   .buddie-profile{
+//     .top-banner{
+//       .avatar{
+//         height: 170px;
+//         width: 170px;
+//       }
+//     }
+//   }
+//   .avatar{
+//     right: 15px;
+//     width: 70px;
+//     height: 70px;
+//   }
+// }
