--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,4 +1,18 @@
-<section class="buddie-profile" id="buddie-profile">
+<section class="header">
+  <h3 id="username" class="align-middle pt-3">{{this.username}}</h3>
+  <img id="user-pic" src="{{this.avatarUrl}}" alt="user-pic">
+  <div class="user-pic-container"></div>
+<div class="main-text container">
+  <h2>{{this.fullname}}</h2>
+  <h4>{{this.highlights}}</h4>
+  <h3>{{this.city}}</h3>
+</div>
+</section>
+
+
+
+
+{{!-- <section class="buddie-profile" id="buddie-profile">
   <div class="top-banner">
     <div class="container pt-4">
       <div class="buddie-info d-flex flex-column justify-content-between">
@@ -15,6 +29,7 @@
       </div>
     </div>
   </div>
+
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-7">
@@ -52,4 +67,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> --}}
