add validator plugin to user model

--- a/views/partials/userListCard.hbs
+++ b/views/partials/userListCard.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-6 buddie-card">
+<div class="col-md-4 col-lg-3 buddie-card">
   <a href="/buddies/{{this.id}}">
     <div class="px-3">
       <div class="row">
